# cvision

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: fruits_alexnet.ipynb  fruits_data.ipynb
src/cvision/: data.py  gpu.py  training.py
